--- a/assets/pages/index.html
+++ b/assets/pages/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pindwin</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="../css/index.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>a</header>
     <main>
         <h1>Suas principais atividades</h1>
         <div id="addModal" class="desactive">
@@ -87,6 +86,6 @@
             <input type="text" class="input-link" id="search-bar" name="search-bar">
         </form>
     </main>
-    <script src="./icons.js" type="text/javascript"></script>
+    <script src="../../src/link.js"></script>
 </body>
 </html>
