--- a/assets/pages/spotify.html
+++ b/assets/pages/spotify.html
@@ -19,7 +19,7 @@
     </main>
     <footer>
         <div id="info">
-            <img src="https://lastfm.freetls.fastly.net/i/u/ar0/5cb0c0e7bfd405bfbcf8f87c57840c5d.jpg" alt="">
+            <img src="https://lastfm.freetls.fastly.net/i/u/ar0/5cb0c0e7bfd405bfbcf8f87c57840c5d.jpg" alt="" id="infoimg">
             <span>
                 <h3>Yam Yam</h3>
                 <h4>No vacation</h4>
@@ -27,19 +27,14 @@
         </div>
         <div id="player">
             <div id="player-opts">
-                <img src="../img/previous.svg" alt="Previous" class="player-control">
+                <img src="../img/previous.svg" alt="Previous" class="player-control" id="prev">
                 <img src="../img/play.svg" alt="Play" class="player-control">
-                <img src="../img/next.svg" alt="Next" class="player-control">
+                <img src="../img/next.svg" alt="Next" class="player-control" id="next">
                 <img src="../img/speaker.svg" alt="Volume" class="player-control" id="volume-btn">
             </div>
             <input type="range" min="0" max="100" class="hidden" id="volume">
         </div>
     </footer>
-    <script>
-        document.getElementById('volume-btn').addEventListener('click', () => {
-            document.getElementById('volume').classList.toggle('hidden')
-            document.getElementById('player-opts').classList.toggle('move')
-        })
-    </script>
+    <script src="../../src/spotify.js"></script>
 </body>
 </html>
