--- a/assets/pages/index.html
+++ b/assets/pages/index.html
@@ -58,7 +58,7 @@
             </div>
             <div class="opt">
                 <!--<a class="link" href="#">-->
-                    <img src="https://www.flaticon.com/svg/static/icons/svg/733/733609.svg" alt="GitHub logo">
+                    <img src="../img/githublogo.png" alt="GitHub logo">
                 <!--</a>-->
                 <a class="link" href="https://github.com">GitHub</a>
             </div>
