git logo exclude

--- a/assets/pages/index.html
+++ b/assets/pages/index.html
@@ -64,7 +64,7 @@
             </div>
             <div class="opt">
                 <!--<a class="link" href="#">-->
-                    <img src="https://www.flaticon.com/svg/static/icons/svg/1384/1384060.svg" alt="Youtube logo">
+                    <img src="https://www.flaticon.com/svg/static/icons/svg/1384/1384060.svg" alt="Youtube logo" width="50">
                 <!--</a>-->
                 <a class="link" href="https://youtube.com">Youtube</a>
             </div>
