fix path resolve

--- a/assets/pages/index.html
+++ b/assets/pages/index.html
@@ -72,7 +72,7 @@
                 <!--<a class="link" href="#">-->
                     <img src="https://www.flaticon.com/svg/static/icons/svg/2111/2111624.svg" alt="Spotify logo">
                 <!--</a>-->
-                <a class="link" href="spotify.html">Spotify</a>
+                <a class="link" href="spotify.html" id="sptflink">Spotify</a>
             </div>            
             <div class="opt">
                 <!--<a class="link" href="#">-->
