--- a/assets/pages/index.html
+++ b/assets/pages/index.html
@@ -40,7 +40,7 @@
                         <input type="checkbox" id="check-minimize-window">
                     </div>
                 </div>
-                <button id="addBtn" onsubmit="addFav()">Adicionar</button>
+                <button id="addBtn" >Adicionar</button>
             </form>
         </div>
         <div id="links">
@@ -51,6 +51,6 @@
             <input type="text" class="input-link" id="search-bar" name="search-bar">
         </form>
     </main>
-    <script defer src="../../src/render.js"></script>
+    <script type="module" defer src="../../src/render.js"></script>
 </body>
 </html>
