--- a/assets/pages/index.html
+++ b/assets/pages/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pindwin</title>
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -40,7 +40,7 @@
                         <input type="checkbox" id="check-minimize-window">
                     </div>
                 </div>
-                <button id="addBtn" >Adicionar</button>
+                <button id="addBtn" onsubmit="addFav()">Adicionar</button>
             </form>
         </div>
         <div id="links">
@@ -51,6 +51,6 @@
             <input type="text" class="input-link" id="search-bar" name="search-bar">
         </form>
     </main>
-    <script type="module" defer src="../../src/render.js"></script>
+    <script defer src="../../dist/renderer.js"></script>
 </body>
 </html>
